# ace-tn

./: .gitignore  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  search.html  searchindex.js  setup.py
.github/workflows/: deploy-docs.yml  publish.yml  run-tests.yml
_sources/: index.rst.txt
_sources/source/: acetn.linalg.rst.txt  acetn.model.models.rst.txt  acetn.renormalization.rst.txt  ctmrg.rst.txt  example_01_tfim.rst.txt  example_03_custom_model.rst.txt  examples.rst.txt  getting_started.rst.txt  ipeps.rst.txt  modules.rst.txt  user_guide.rst.txt
_static/: custom.css
acetn/evolution/: __init__.py  als_solver.py  evolve.py  fast_full_update.py  full_update.py  gate.py  lambda_tensors.py  simple_update.py  tensor_update.py
acetn/ipeps/: __init__.py  bond.py  ipeps.py  ipeps_config.py  site_tensor.py  tensor_network.py
benchmarking/: benchmarking_ctmrg_projectors.py  benchmarking_full_update.py
samples/: 01_tf_ising.py  02_heisenberg.py  03_custom_model.py  04_compass_model.py  05_honeycomb_ising.py  06_kagome_ising.py  07_simple_update.py
source/: acetn.evolution.html  acetn.html  acetn.ipeps.html  acetn.linalg.html  acetn.measurement.html  acetn.model.html  acetn.model.models.html  acetn.renormalization.html  acetn.utils.html  ctmrg.html  example_01_tfim.html  example_02_heisenberg.html  example_03_custom_model.html  example_04_compass_model.html  examples.html  full_update.html  getting_started.html  input_settings.html  ipeps.html  methods.html  modules.html  simple_update.html  user_guide.html
(+122 files in other folders)
