[build-system]
requires = ["setuptools", "wheel", "torch"]
build-backend = "setuptools.build_meta"

[project]
name = "acetn"
version = "0.1.3"
description = "GPU-accelerated corner-transfer-matrix renormalization of infinite projected entangled-pair states."
readme = "README.md"
license = { text = "Apache-2.0" }

authors = [{ name = "Addison Richards", email = "adsrichards0@gmail.com" }]

requires-python = ">=3.10"
dependencies = [
    "torch",
    "tqdm",
    "toml",
    "pytest",
]

[project.optional-dependencies]
cutensor = []  # No extra Python deps, just triggers C++ build via ACETN_BUILD_CUTENSOR=1

[tool.setuptools.packages]
find = { where = ["."], exclude = ["csrc*", "tests*", "benchmarking*", "samples*", "docs*"] }
